api/.kube/2-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api
  namespace: mock-api
spec:
  selector:
    matchLabels:
      name: api
  strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
  template:
    metadata:
      labels:
        name: api
    spec:
      containers:
      - name: api
        image: elk-api:latest
        imagePullPolicy: Never
        ports:
        - name: node-port
          containerPort: 3000
          protocol: TCP
        readinessProbe:
          tcpSocket:
              port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
              port: 3000
          initialDelaySeconds: 15
          periodSeconds: 30
