api/.kube/2-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api
  namespace: elk-api
spec:
  selector:
    matchLabels:
      name: api
  strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
  template:
    metadata:
      labels:
        name: api
    spec:
      containers:
      - name: api
        # Use vNo increment on every build because with imagePullPolicy
        # it does not seem to pick up latest image
        image: elk-api:v6
        imagePullPolicy: Never
        ports:
        - name: node-port
          containerPort: 3000
          protocol: TCP
        readinessProbe:
          tcpSocket:
              port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
              port: 3000
          initialDelaySeconds: 15
          periodSeconds: 30
        resources:
          requests:
            memory: 100Mi
            cpu: 0.25
          limits:
            memory: 300Mi
            cpu: 0.75
