api/.kube/4-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api
  namespace: mock-api
spec:
  type: NodePort
  selector:
    name: api
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
      protocol: TCP
